Clarify env example for Maps + LLM

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
 PORT=3000
+
+# Google Maps (server-side Places API only)
 GOOGLE_MAPS_API_KEY=
+
+# Optional: local LLM (Open WebUI / any OpenAI-compatible server)
 LLM_API_BASE_URL=
 LLM_API_KEY=
 LLM_MODEL=
+
+# Example:
+# LLM_API_BASE_URL=http://localhost:8080/v1
+# LLM_API_KEY=changeme
+# LLM_MODEL=llama-3
+
